codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Каталог моделей                                                       
                                                                                
› 1. gpt-5.1-codex (current)  Оптимизирована под Codex. Баланс качества
                              рассуждений и навыков кодинга.                       
  2. gpt-5.1-codex-mini       Оптимизирована под Codex: дешевле и быстрее, но  
                              слабее по возможностям.                                          
  3. gpt-4.1-codex            Устаревшая модель. Нужна для совместимости со    
                              старыми автоматизациями.
